--- a/app/src/main/res/layout/fragment_manual.xml
+++ b/app/src/main/res/layout/fragment_manual.xml
@@ -18,7 +18,7 @@
 
 
             <ImageView
-                android:src="@drawable/imv1"
+                android:src="@drawable/a1"
                 android:layout_margin="1dp"
                 android:scaleType="center"
                 android:id="@+id/imv1"
